Fix horizontal scrolling issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -279,8 +279,4 @@ a.link:hover:after,a.active:after {
   #aquis-project {
     padding-top: 200px;
   }
-
-  html, body {
-    overflow-x: hidden;
-  }
 }
